# skewness-and-kurtosis

./: FIFA_data_descript.txt  README.md  data_descripiton.md  data_information.py  fifa_analysis_only.py  insurance_preprocess.py  main.py  main_final.py  main_simul.py  main_simulation.py  main_simulation_theta2.py  main_success_case.py  main_theta2_non0.py  main_v2.py  main_v3.py  pyproject.toml  silmul_dat_generator.py  test_fifa.py
data/: DoctorAUS.csv  seer_breast_cancer_cleaned.csv
result/: analysis_report_v2.txt  comprehensive_report.txt  data_characteristics_report.txt  mom_results.csv  report.txt  report_fifa_convergence.txt  report_simul.txt  report_success_case.txt  simulation_report.txt  unified_report.txt
result_fifa/: fifa_comprehensive_report.txt
result_final/: report_v3.txt
result_theta2_non0/: final_comprehensive_report.txt
result_v2/: report_v2.txt
result_v3/: report_v3.txt
simulation_results/: simulation_report.txt  simulation_report_theta2_free.txt
src/: analysis.py  analysis_v2.py  baselines.py  data_prep.py  data_prep_v2.py  distributions.py  expansions_mom.py  metrics.py  metrics_v2.py  models.py  moments.py  optimizer.py  orthopoly.py  polynomials.py
